The code was reformatted. Added all operations.